--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Arancibiamon/ProyectoN3#readme",
   "dependencies": {
+    "chart.js": "^3.9.1",
     "moment": "^2.29.4"
   }
 }
