cambios al 02sep

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Arancibiamon/ProyectoN3.git"
   },
-  "author": "Tomás-Martín",
+  "author": "Tomás",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Arancibiamon/ProyectoN3/issues"
